--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -13,14 +13,36 @@ $codeFontFamily: Menlo, Consolas, 'DejaVu Sans Mono', monospace;
 
   .code-right-pane {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: .5rem;
+    right: .5rem;
     z-index: 100;
     max-width: percentage(1 - 0.618);
-    max-height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 
     & > * {
-      margin: .5rem;
+      margin-bottom: .5rem;
+    }
+
+    .code-right-pane-controls {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-end;
+      justify-content: flex-end;
+
+      & > * {
+        margin-left: 0.5rem;
+      }
+
+      button {
+        cursor: pointer;
+
+        &.btn-light {
+          border: 1px solid rgba(0, 0, 0, 0.125);
+        }
+      }
     }
   }
 }
