Prepare for production build, optimize vendor js

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -105,6 +105,7 @@ $codeFontFamily: Menlo, Consolas, 'DejaVu Sans Mono', monospace;
   }
 
   .ts-display {
+    width: 4rem;
     text-align: center;
     font-size: 0.7rem;
   }
