Draw segment overlays on slider

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -62,7 +62,7 @@ $codeFontFamily: Menlo, Consolas, 'DejaVu Sans Mono', monospace;
 
 .CodeMirror {
   $exerciseBackgroundColor: transparentize(#E1BEE7, 0.5);
-  $assertBackgroundColor: transparentize(#EF4F4F, 0.5);
+  $assertBackgroundColor: transparentize(#FFCDD2, 0.5);
 
   font-family: $codeFontFamily;
 
