--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -51,6 +51,7 @@ $codeFontFamily: Menlo, Consolas, 'DejaVu Sans Mono', monospace;
     left: 0;
     right: 0;
     top: 0;
+    z-index: 100;
     margin: auto;
     width: 20rem;
 
