Show cursor only when focused

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -67,6 +67,14 @@ $codeFontFamily: Menlo, Consolas, 'DejaVu Sans Mono', monospace;
 
   font-family: $codeFontFamily;
 
+  .cursor-show {
+    visibility: visible !important;
+  }
+
+  .cursor-hide {
+    visibility: hidden !important;
+  }
+
   .exercise-block {
     padding: .15em 0;
     border-radius: .1em;
